<resources>
    <string name="app_name">爱游</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_add">Add</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_login">爱游</string>
    <string name="login_title">爱游</string>
    <string name="login_without_username">直接使用</string>
    <string name="title_activity_register_account">RegisterAccount</string>
    <string name="login_activity_username_hint">用户名</string>
    <string name="login_activity_password_hint">密码</string>
    <string name="main_activity_name">约游</string>
    <string name="login_success">登陆成功</string>
    <string name="wrong_username">用户名错误</string>
    <string name="username_password_not_match">密码与用户名不匹配</string>
    <string name="hx_register_failed">HX注册失败，请更换用户名重试</string>
    <string name="unknown_error">未知的错误，请联系管理员</string>
    <string name="empty_username">用户名不能为空</string>
    <string name="empty_pw">密码不能为空</string>
    <string name="empty_email">邮箱不能为空</string>
    <string name="illegal_email_format">邮箱格式不合法</string>
    <string name="register_success">注册成功</string>
    <string name="repeated_username">用户名已被使用，请重新输入</string>
    <string name="repeated_email">邮箱已被使用，请重新输入</string>
    <string name="insert_failed">数据库插入失败，请稍后再试</string>
    <string name="sql_exceptiion">服务器SQL异常，请联系管理员</string>
    <string name="set_avatar">设置头像</string>
    <string name="choose_local_pic">选择本地图片</string>
    <string name="take_photo">拍照</string>

    
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="hello_blank_fragment">Hello dating fragment</string>
    <string name="title_activity_baidu_map_demo">BaiduMapDemoActivity</string>
    <string name="title_activity_chat">ChatActivity</string>

    <string name="setting">设置</string>
    <string name="feedback">反馈</string>
    <string name="info">关于</string>
    <string name="self_info">个人</string>


    <!--message fragment-->
    <string name="message_fragment_no_msg">暂时没有消息</string>
    <string name="title_activity_about_info">关于</string>

    <string name="develop_team_info">powered by Half Dog Studio</string>
    <string name="cannot_chat_with_self">不能跟自己聊天！</string>


    <!--feedback activity-->
    <string name="feedback_activity_edittext_hint">请写下您宝贵的意见(最多200字)</string>
    <string name="feedback_activity_button_submit">提交</string>
    <string name="feedback_activity_button_cancel">取消</string>
    <string name="title_activity_feedback">意见反馈</string>

    <!--progressbar-->
    <string name="progress_bar_hint">请稍等</string>

    <!--main activity-->
    <string name="hx_login_error">环信登陆失败,请重新登陆</string>
    <string name="hx_login_success">环信登陆成功</string>
    <string name="title_activity_person_info">个人信息</string>

    <string name="network_state_not_connected">网络好像出了点问题，请检查下</string>

    <string name="action_settings">Settings</string>

    <!--invitation_activity-->
    <string name="title_activity_invitation">新的邀约</string>
    <string name="activity_invitation_edittext_hint">请输入邀约内容</string>
    <string name="action_submit">提交</string>
    <string name="activity_invitation_empty_content_hint">请输入要发布的内容！</string>
    <string name="volley_request_timeout_error">网络连接超时，请稍后重试</string>
    <string name="activity_invitation_response_ok">提交成功</string>
    <string name="activity_invitation_response_not_ok">提交失败，请稍后重试</string>
    <string name="activity_invitation_response_parse_error">JSON解析错误，请联系管理员</string>

    <!--notification-->
    <string name="notification_from_hint">来自</string>
    <string name="notification_end">的消息</string>

    <string name="exit_login">退出登录</string>

    <string name="wait_a_moment">请稍后</string>

    <!--login activity-->
    <string name="network_unavailabel">网络连接不可用，请检查</string>

    <!--register activity-->
    <string name="register_user_name_hint">只允许小写字母和数字</string>
    <string name="register_user_name_not_compliant">用户名不符合要求，只允许小写字母和数字!</string>
</resources>
