<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="halfdog.bupt.edu.bubbledating.activity.FeedbackActivity">

    <EditText
        android:id="@+id/feedback_activity_edittext"
        android:hint="@string/feedback_activity_edittext_hint"
        android:layout_marginLeft="@dimen/feedback_activity_edittext_side_margin"
        android:layout_marginRight="@dimen/feedback_activity_edittext_side_margin"
        android:layout_width="match_parent"
        android:cursorVisible="true"
        android:gravity="top"
        android:layout_height="@dimen/feedback_activity_edittext_height" />
    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedback_activity_edittext">
        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/feedback_activity_submit"
            android:text="@string/feedback_activity_button_submit"
            android:background="@color/feedback_activity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/feedback_activity_cancel"
            android:layout_toRightOf="@id/feedback_activity_submit"
            android:layout_marginLeft="@dimen/feedback_activity_button_interval"
            android:background="@color/feedback_activity_button"
            android:text="@string/feedback_activity_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></com.gc.materialdesign.views.ButtonRectangle>
    </RelativeLayout>

</RelativeLayout>
